// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthForm:AuthForm 1`] = `
<form
  className="grommetux-form grommetux-form--pad-medium grommetux-login-form"
  onSubmit={[Function]}
>
  <div
    className="grommetux-box grommetux-box--direction-column grommetux-box--align-start grommetux-box--responsive grommetux-box--pad-none"
    id={undefined}
    onClick={undefined}
    role={undefined}
    style={Object {}}
    tabIndex={undefined}
  />
  <fieldset>
    <div
      className="grommetux-form-field grommetux-form-field--text grommetux-form-field--size-medium"
      onClick={[Function]}
    >
      <label
        className="grommetux-form-field__label"
        htmlFor="username"
      >
        Email
      </label>
      <span
        className="grommetux-form-field__contents"
      >
        <input
          onChange={[Function]}
          type="email"
          value=""
        />
      </span>
    </div>
    <div
      className="grommetux-form-field grommetux-form-field--text grommetux-form-field--size-medium"
      onClick={[Function]}
    >
      <label
        className="grommetux-form-field__label"
        htmlFor="password"
      >
        Password
      </label>
      <span
        className="grommetux-form-field__contents"
      >
        <input
          onChange={[Function]}
          type="password"
          value=""
        />
      </span>
    </div>
  </fieldset>
  <footer
    className="grommetux-box grommetux-box--direction-row grommetux-box--justify-between grommetux-box--align-center grommetux-box--pad-none grommetux-footer grommetux-footer--small"
    id={undefined}
    onClick={undefined}
    role={undefined}
    style={Object {}}
    tabIndex={undefined}
  >
    <button
      aria-label={undefined}
      className="grommetux-button grommetux-button--primary"
      disabled={false}
      href={undefined}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="submit"
    >
      <span
        className="grommetux-button__label"
      >
        Submit
      </span>
    </button>
  </footer>
</form>
`;

exports[`AuthForm:AuthFormError 1`] = `
<form
  className="grommetux-form grommetux-form--pad-medium grommetux-login-form"
  onSubmit={[Function]}
>
  <div
    className="grommetux-box grommetux-box--direction-column grommetux-box--align-start grommetux-box--responsive grommetux-box--pad-none"
    id={undefined}
    onClick={undefined}
    role={undefined}
    style={Object {}}
    tabIndex={undefined}
  />
  <fieldset>
    <div
      className="grommetux-form-field grommetux-form-field--text grommetux-form-field--size-medium"
      onClick={[Function]}
    >
      <label
        className="grommetux-form-field__label"
        htmlFor="username"
      >
        Email
      </label>
      <span
        className="grommetux-form-field__contents"
      >
        <input
          onChange={[Function]}
          type="email"
          value=""
        />
      </span>
    </div>
    <div
      className="grommetux-form-field grommetux-form-field--text grommetux-form-field--size-medium"
      onClick={[Function]}
    >
      <label
        className="grommetux-form-field__label"
        htmlFor="password"
      >
        Password
      </label>
      <span
        className="grommetux-form-field__contents"
      >
        <input
          onChange={[Function]}
          type="password"
          value=""
        />
      </span>
    </div>
    <div
      className="error"
    >
      I am an error
    </div>
  </fieldset>
  <footer
    className="grommetux-box grommetux-box--direction-row grommetux-box--justify-between grommetux-box--align-center grommetux-box--pad-none grommetux-footer grommetux-footer--small"
    id={undefined}
    onClick={undefined}
    role={undefined}
    style={Object {}}
    tabIndex={undefined}
  >
    <button
      aria-label={undefined}
      className="grommetux-button grommetux-button--primary"
      disabled={false}
      href={undefined}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="submit"
    >
      <span
        className="grommetux-button__label"
      >
        Submit
      </span>
    </button>
  </footer>
</form>
`;

exports[`Header:Header 1`] = `
<div
  className="grommetux-header__container grommetux-header__container--fixed"
>
  <div
    className="grommetux-header__mirror"
  />
  <div
    className="grommetux-header__wrapper"
  >
    <div
      className="grommetux-box grommetux-box--direction-column grommetux-box--responsive grommetux-box--pad-none grommetux-box--flex-off"
      id={undefined}
      onClick={undefined}
      role={undefined}
      style={Object {}}
      tabIndex={undefined}
    >
      <header
        className="grommetux-box grommetux-box--direction-row grommetux-box--align-center grommetux-box--pad-small grommetux-background-color-index-brand grommetux-background-color-index--pending grommetux-header"
        id={undefined}
        onClick={undefined}
        role={undefined}
        style={Object {}}
        tabIndex={undefined}
      >
        <div
          className="grommetux-box grommetux-box--direction-row grommetux-box--align-center grommetux-box--pad-none grommetux-title grommetux-title--responsive grommetux-title--truncate"
          id={undefined}
          onClick={undefined}
          role={undefined}
          style={Object {}}
          tabIndex={undefined}
        >
          <svg
            aria-label="money"
            className="grommetux-control-icon grommetux-control-icon-money grommetux-control-icon--responsive"
            height="24px"
            role="img"
            version="1.1"
            viewBox="0 0 24 24"
            width="24px"
          >
            <path
              d="M16,16 C16,14.8954305 12.8659932,14 9,14 C5.13400675,14 2,14.8954305 2,16 C2,17.1045695 5.13400675,18 9,18 C12.8659932,18 16,17.1045695 16,16 Z M2,16 L2,20.9367547 C2,22.0762536 5.13400675,23 9,23 C12.8659932,23 16,22.0762537 16,20.9367548 L16,16 M9,5 C4.581722,5 1,5.8954305 1,7 C1,8.1045695 4.581722,9 9,9 M1,7 L1,12.0000002 C1,13.0128881 4.581722,14 9,14 M23,4 C23,2.8954305 19.9004329,2 16.0769231,2 C12.2534133,2 9.15384615,2.8954305 9.15384615,4 C9.15384615,5.1045695 12.2534133,6 16.0769231,6 C19.9004329,6 23,5.1045695 23,4 Z M16,16 C19.8235098,16 23.0000002,15.0128879 23.0000002,14 L23,4 M9.15384615,3.99999999 L9.15384615,14.1660042 M8.99999999,9.00000001 C8.99999999,10.0128879 12.2534135,11 16.0769233,11 C19.9004331,11 23.0000004,10.0128879 23.0000004,9.00000001"
              fill="none"
              stroke="#000"
              strokeWidth="2"
            />
          </svg>
          <a
            aria-label={undefined}
            className="grommetux-anchor grommetux-anchor--active"
            href="/"
            onClick={[Function]}
          >
            Hello, Cosmos!
          </a>
        </div>
        <div
          className="grommetux-box grommetux-box--direction-row grommetux-box--justify-end grommetux-box--flex grommetux-box--pad-horizontal-small"
          id={undefined}
          onClick={undefined}
          role={undefined}
          style={Object {}}
          tabIndex={undefined}
        >
          <a
            aria-label={undefined}
            className="grommetux-anchor grommetux-anchor--animate-icon grommetux-anchor--icon grommetux-anchor--icon-label grommetux-anchor--primary grommetux-anchor--reverse"
            href={undefined}
            onClick={[Function]}
          >
            Sign out
            <svg
              aria-label="logout"
              className="grommetux-control-icon grommetux-control-icon-logout grommetux-control-icon--responsive"
              height="24px"
              role="img"
              version="1.1"
              viewBox="0 0 24 24"
              width="24px"
            >
              <path
                d="M13,9 L13,2 L1,2 L1,22 L13,22 L13,15 M22,12 L5,12 M17,7 L22,12 L17,17"
                fill="none"
                stroke="#231F1F"
                strokeWidth="2"
              />
            </svg>
          </a>
        </div>
      </header>
    </div>
  </div>
</div>
`;

exports[`Money:Logo 1`] = `
<svg
  aria-label="money"
  className="grommetux-control-icon grommetux-control-icon-money grommetux-control-icon--responsive"
  height="24px"
  role="img"
  version="1.1"
  viewBox="0 0 24 24"
  width="24px"
>
  <path
    d="M16,16 C16,14.8954305 12.8659932,14 9,14 C5.13400675,14 2,14.8954305 2,16 C2,17.1045695 5.13400675,18 9,18 C12.8659932,18 16,17.1045695 16,16 Z M2,16 L2,20.9367547 C2,22.0762536 5.13400675,23 9,23 C12.8659932,23 16,22.0762537 16,20.9367548 L16,16 M9,5 C4.581722,5 1,5.8954305 1,7 C1,8.1045695 4.581722,9 9,9 M1,7 L1,12.0000002 C1,13.0128881 4.581722,14 9,14 M23,4 C23,2.8954305 19.9004329,2 16.0769231,2 C12.2534133,2 9.15384615,2.8954305 9.15384615,4 C9.15384615,5.1045695 12.2534133,6 16.0769231,6 C19.9004329,6 23,5.1045695 23,4 Z M16,16 C19.8235098,16 23.0000002,15.0128879 23.0000002,14 L23,4 M9.15384615,3.99999999 L9.15384615,14.1660042 M8.99999999,9.00000001 C8.99999999,10.0128879 12.2534135,11 16.0769233,11 C19.9004331,11 23.0000004,10.0128879 23.0000004,9.00000001"
    fill="none"
    stroke="#000"
    strokeWidth="2"
  />
</svg>
`;

exports[`Table:Table 1`] = `
<div
  className="grommetux-table"
>
  <table
    className="grommetux-table__table"
  >
    <thead>
      <tr>
        <th>
          Hello
        </th>
        <th>
          World
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="grommetux-table-row"
        onClick={undefined}
      >
        <td
          colSpan={2}
          style={
            Object {
              "textAlign": "center",
            }
          }
        >
          No data
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Table:TableLoading 1`] = `
<div
  className="grommetux-table"
>
  <table
    className="grommetux-table__table"
  >
    <thead>
      <tr>
        <th>
          Hello
        </th>
        <th>
          World
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="grommetux-table-row"
        onClick={undefined}
      >
        <td
          colSpan={2}
          style={
            Object {
              "textAlign": "center",
            }
          }
        >
          <svg
            aria-label="Spinning"
            className="grommetux-icon-spinning grommetux-icon-spinning--responsive"
            role="img"
            version="1.1"
            viewBox="0 0 48 48"
          >
            <circle
              cx="24"
              cy="24"
              fill="none"
              r="21"
              stroke="#979797"
              strokeWidth="6"
            />
          </svg>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Table:TableWithData 1`] = `
<div
  className="grommetux-table"
>
  <table
    className="grommetux-table__table"
  >
    <thead>
      <tr>
        <th>
          Hello
        </th>
        <th>
          World
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="grommetux-table-row grommetux-table-row--selectable"
        onClick={[Function]}
        style={
          Object {
            "cursor": "pointer",
          }
        }
      >
        <td>
          hi
        </td>
        <td>
          Earth
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Timeseries:Timeseries 1`] = `
<div
  className="recharts-wrapper"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onTouchMove={[Function]}
  style={
    Object {
      "cursor": "default",
      "height": 250,
      "position": "relative",
      "width": 730,
    }
  }
>
  <svg
    className="recharts-surface"
    height={250}
    style={undefined}
    version="1.1"
    viewBox="0 0 730 250"
    width={730}
  >
    <g
      className="recharts-cartesian-grid"
    >
      <g
        className="recharts-cartesian-grid-horizontal"
      >
        <line
          fill="none"
          height={210}
          stroke="#f5f5f5"
          width={620}
          x={80}
          x1={80}
          x2={700}
          y={5}
          y1={215}
          y2={215}
        />
        <line
          fill="none"
          height={210}
          stroke="#f5f5f5"
          width={620}
          x={80}
          x1={80}
          x2={700}
          y={5}
          y1={162.5}
          y2={162.5}
        />
        <line
          fill="none"
          height={210}
          stroke="#f5f5f5"
          width={620}
          x={80}
          x1={80}
          x2={700}
          y={5}
          y1={110}
          y2={110}
        />
        <line
          fill="none"
          height={210}
          stroke="#f5f5f5"
          width={620}
          x={80}
          x1={80}
          x2={700}
          y={5}
          y1={57.5}
          y2={57.5}
        />
        <line
          fill="none"
          height={210}
          stroke="#f5f5f5"
          width={620}
          x={80}
          x1={80}
          x2={700}
          y={5}
          y1={5}
          y2={5}
        />
      </g>
      <g
        className="recharts-cartesian-grid-vertical"
      >
        <line
          fill="none"
          height={210}
          stroke="#f5f5f5"
          width={620}
          x={80}
          x1={90}
          x2={90}
          y={5}
          y1={5}
          y2={215}
        />
        <line
          fill="none"
          height={210}
          stroke="#f5f5f5"
          width={620}
          x={80}
          x1={110}
          x2={110}
          y={5}
          y1={5}
          y2={215}
        />
        <line
          fill="none"
          height={210}
          stroke="#f5f5f5"
          width={620}
          x={80}
          x1={130}
          x2={130}
          y={5}
          y1={5}
          y2={215}
        />
        <line
          fill="none"
          height={210}
          stroke="#f5f5f5"
          width={620}
          x={80}
          x1={150}
          x2={150}
          y={5}
          y1={5}
          y2={215}
        />
        <line
          fill="none"
          height={210}
          stroke="#f5f5f5"
          width={620}
          x={80}
          x1={170}
          x2={170}
          y={5}
          y1={5}
          y2={215}
        />
        <line
          fill="none"
          height={210}
          stroke="#f5f5f5"
          width={620}
          x={80}
          x1={190}
          x2={190}
          y={5}
          y1={5}
          y2={215}
        />
        <line
          fill="none"
          height={210}
          stroke="#f5f5f5"
          width={620}
          x={80}
          x1={210}
          x2={210}
          y={5}
          y1={5}
          y2={215}
        />
        <line
          fill="none"
          height={210}
          stroke="#f5f5f5"
          width={620}
          x={80}
          x1={230}
          x2={230}
          y={5}
          y1={5}
          y2={215}
        />
        <line
          fill="none"
          height={210}
          stroke="#f5f5f5"
          width={620}
          x={80}
          x1={250}
          x2={250}
          y={5}
          y1={5}
          y2={215}
        />
        <line
          fill="none"
          height={210}
          stroke="#f5f5f5"
          width={620}
          x={80}
          x1={270}
          x2={270}
          y={5}
          y1={5}
          y2={215}
        />
        <line
          fill="none"
          height={210}
          stroke="#f5f5f5"
          width={620}
          x={80}
          x1={290}
          x2={290}
          y={5}
          y1={5}
          y2={215}
        />
        <line
          fill="none"
          height={210}
          stroke="#f5f5f5"
          width={620}
          x={80}
          x1={310}
          x2={310}
          y={5}
          y1={5}
          y2={215}
        />
        <line
          fill="none"
          height={210}
          stroke="#f5f5f5"
          width={620}
          x={80}
          x1={330}
          x2={330}
          y={5}
          y1={5}
          y2={215}
        />
        <line
          fill="none"
          height={210}
          stroke="#f5f5f5"
          width={620}
          x={80}
          x1={350}
          x2={350}
          y={5}
          y1={5}
          y2={215}
        />
        <line
          fill="none"
          height={210}
          stroke="#f5f5f5"
          width={620}
          x={80}
          x1={370}
          x2={370}
          y={5}
          y1={5}
          y2={215}
        />
        <line
          fill="none"
          height={210}
          stroke="#f5f5f5"
          width={620}
          x={80}
          x1={390}
          x2={390}
          y={5}
          y1={5}
          y2={215}
        />
        <line
          fill="none"
          height={210}
          stroke="#f5f5f5"
          width={620}
          x={80}
          x1={410}
          x2={410}
          y={5}
          y1={5}
          y2={215}
        />
        <line
          fill="none"
          height={210}
          stroke="#f5f5f5"
          width={620}
          x={80}
          x1={430}
          x2={430}
          y={5}
          y1={5}
          y2={215}
        />
        <line
          fill="none"
          height={210}
          stroke="#f5f5f5"
          width={620}
          x={80}
          x1={450}
          x2={450}
          y={5}
          y1={5}
          y2={215}
        />
        <line
          fill="none"
          height={210}
          stroke="#f5f5f5"
          width={620}
          x={80}
          x1={470}
          x2={470}
          y={5}
          y1={5}
          y2={215}
        />
        <line
          fill="none"
          height={210}
          stroke="#f5f5f5"
          width={620}
          x={80}
          x1={490}
          x2={490}
          y={5}
          y1={5}
          y2={215}
        />
        <line
          fill="none"
          height={210}
          stroke="#f5f5f5"
          width={620}
          x={80}
          x1={510}
          x2={510}
          y={5}
          y1={5}
          y2={215}
        />
        <line
          fill="none"
          height={210}
          stroke="#f5f5f5"
          width={620}
          x={80}
          x1={530}
          x2={530}
          y={5}
          y1={5}
          y2={215}
        />
        <line
          fill="none"
          height={210}
          stroke="#f5f5f5"
          width={620}
          x={80}
          x1={550}
          x2={550}
          y={5}
          y1={5}
          y2={215}
        />
        <line
          fill="none"
          height={210}
          stroke="#f5f5f5"
          width={620}
          x={80}
          x1={570}
          x2={570}
          y={5}
          y1={5}
          y2={215}
        />
        <line
          fill="none"
          height={210}
          stroke="#f5f5f5"
          width={620}
          x={80}
          x1={590}
          x2={590}
          y={5}
          y1={5}
          y2={215}
        />
        <line
          fill="none"
          height={210}
          stroke="#f5f5f5"
          width={620}
          x={80}
          x1={610}
          x2={610}
          y={5}
          y1={5}
          y2={215}
        />
        <line
          fill="none"
          height={210}
          stroke="#f5f5f5"
          width={620}
          x={80}
          x1={630}
          x2={630}
          y={5}
          y1={5}
          y2={215}
        />
        <line
          fill="none"
          height={210}
          stroke="#f5f5f5"
          width={620}
          x={80}
          x1={650}
          x2={650}
          y={5}
          y1={5}
          y2={215}
        />
        <line
          fill="none"
          height={210}
          stroke="#f5f5f5"
          width={620}
          x={80}
          x1={670}
          x2={670}
          y={5}
          y1={5}
          y2={215}
        />
        <line
          fill="none"
          height={210}
          stroke="#f5f5f5"
          width={620}
          x={80}
          x1={690}
          x2={690}
          y={5}
          y1={5}
          y2={215}
        />
        <line
          fill="none"
          height={210}
          stroke="#f5f5f5"
          width={620}
          x={80}
          x1={80}
          x2={80}
          y={5}
          y1={5}
          y2={215}
        />
        <line
          fill="none"
          height={210}
          stroke="#f5f5f5"
          width={620}
          x={80}
          x1={700}
          x2={700}
          y={5}
          y1={5}
          y2={215}
        />
      </g>
    </g>
    <g
      className="recharts-layer recharts-cartesian-axis recharts-xAxis xAxis"
    >
      <line
        className="recharts-cartesian-axis-line"
        fill="none"
        height={30}
        stroke="#666"
        width={620}
        x={80}
        x1={80}
        x2={700}
        y={215}
        y1={215}
        y2={215}
      />
      <g
        className="recharts-cartesian-axis-ticks"
      >
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={620}
            x={80}
            x1={90}
            x2={90}
            y={215}
            y1={221}
            y2={215}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={620}
            x={90}
            y={223}
          >
            <tspan
              dy="0.71em"
              x={90}
            >
              1
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={620}
            x={80}
            x1={110}
            x2={110}
            y={215}
            y1={221}
            y2={215}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={620}
            x={110}
            y={223}
          >
            <tspan
              dy="0.71em"
              x={110}
            >
              2
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={620}
            x={80}
            x1={130}
            x2={130}
            y={215}
            y1={221}
            y2={215}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={620}
            x={130}
            y={223}
          >
            <tspan
              dy="0.71em"
              x={130}
            >
              3
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={620}
            x={80}
            x1={150}
            x2={150}
            y={215}
            y1={221}
            y2={215}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={620}
            x={150}
            y={223}
          >
            <tspan
              dy="0.71em"
              x={150}
            >
              4
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={620}
            x={80}
            x1={170}
            x2={170}
            y={215}
            y1={221}
            y2={215}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={620}
            x={170}
            y={223}
          >
            <tspan
              dy="0.71em"
              x={170}
            >
              5
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={620}
            x={80}
            x1={190}
            x2={190}
            y={215}
            y1={221}
            y2={215}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={620}
            x={190}
            y={223}
          >
            <tspan
              dy="0.71em"
              x={190}
            >
              6
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={620}
            x={80}
            x1={210}
            x2={210}
            y={215}
            y1={221}
            y2={215}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={620}
            x={210}
            y={223}
          >
            <tspan
              dy="0.71em"
              x={210}
            >
              7
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={620}
            x={80}
            x1={230}
            x2={230}
            y={215}
            y1={221}
            y2={215}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={620}
            x={230}
            y={223}
          >
            <tspan
              dy="0.71em"
              x={230}
            >
              8
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={620}
            x={80}
            x1={250}
            x2={250}
            y={215}
            y1={221}
            y2={215}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={620}
            x={250}
            y={223}
          >
            <tspan
              dy="0.71em"
              x={250}
            >
              9
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={620}
            x={80}
            x1={270}
            x2={270}
            y={215}
            y1={221}
            y2={215}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={620}
            x={270}
            y={223}
          >
            <tspan
              dy="0.71em"
              x={270}
            >
              10
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={620}
            x={80}
            x1={290}
            x2={290}
            y={215}
            y1={221}
            y2={215}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={620}
            x={290}
            y={223}
          >
            <tspan
              dy="0.71em"
              x={290}
            >
              11
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={620}
            x={80}
            x1={310}
            x2={310}
            y={215}
            y1={221}
            y2={215}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={620}
            x={310}
            y={223}
          >
            <tspan
              dy="0.71em"
              x={310}
            >
              12
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={620}
            x={80}
            x1={330}
            x2={330}
            y={215}
            y1={221}
            y2={215}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={620}
            x={330}
            y={223}
          >
            <tspan
              dy="0.71em"
              x={330}
            >
              13
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={620}
            x={80}
            x1={350}
            x2={350}
            y={215}
            y1={221}
            y2={215}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={620}
            x={350}
            y={223}
          >
            <tspan
              dy="0.71em"
              x={350}
            >
              14
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={620}
            x={80}
            x1={370}
            x2={370}
            y={215}
            y1={221}
            y2={215}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={620}
            x={370}
            y={223}
          >
            <tspan
              dy="0.71em"
              x={370}
            >
              15
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={620}
            x={80}
            x1={390}
            x2={390}
            y={215}
            y1={221}
            y2={215}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={620}
            x={390}
            y={223}
          >
            <tspan
              dy="0.71em"
              x={390}
            >
              16
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={620}
            x={80}
            x1={410}
            x2={410}
            y={215}
            y1={221}
            y2={215}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={620}
            x={410}
            y={223}
          >
            <tspan
              dy="0.71em"
              x={410}
            >
              17
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={620}
            x={80}
            x1={430}
            x2={430}
            y={215}
            y1={221}
            y2={215}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={620}
            x={430}
            y={223}
          >
            <tspan
              dy="0.71em"
              x={430}
            >
              18
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={620}
            x={80}
            x1={450}
            x2={450}
            y={215}
            y1={221}
            y2={215}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={620}
            x={450}
            y={223}
          >
            <tspan
              dy="0.71em"
              x={450}
            >
              19
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={620}
            x={80}
            x1={470}
            x2={470}
            y={215}
            y1={221}
            y2={215}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={620}
            x={470}
            y={223}
          >
            <tspan
              dy="0.71em"
              x={470}
            >
              20
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={620}
            x={80}
            x1={490}
            x2={490}
            y={215}
            y1={221}
            y2={215}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={620}
            x={490}
            y={223}
          >
            <tspan
              dy="0.71em"
              x={490}
            >
              21
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={620}
            x={80}
            x1={510}
            x2={510}
            y={215}
            y1={221}
            y2={215}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={620}
            x={510}
            y={223}
          >
            <tspan
              dy="0.71em"
              x={510}
            >
              22
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={620}
            x={80}
            x1={530}
            x2={530}
            y={215}
            y1={221}
            y2={215}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={620}
            x={530}
            y={223}
          >
            <tspan
              dy="0.71em"
              x={530}
            >
              23
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={620}
            x={80}
            x1={550}
            x2={550}
            y={215}
            y1={221}
            y2={215}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={620}
            x={550}
            y={223}
          >
            <tspan
              dy="0.71em"
              x={550}
            >
              24
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={620}
            x={80}
            x1={570}
            x2={570}
            y={215}
            y1={221}
            y2={215}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={620}
            x={570}
            y={223}
          >
            <tspan
              dy="0.71em"
              x={570}
            >
              25
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={620}
            x={80}
            x1={590}
            x2={590}
            y={215}
            y1={221}
            y2={215}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={620}
            x={590}
            y={223}
          >
            <tspan
              dy="0.71em"
              x={590}
            >
              26
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={620}
            x={80}
            x1={610}
            x2={610}
            y={215}
            y1={221}
            y2={215}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={620}
            x={610}
            y={223}
          >
            <tspan
              dy="0.71em"
              x={610}
            >
              27
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={620}
            x={80}
            x1={630}
            x2={630}
            y={215}
            y1={221}
            y2={215}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={620}
            x={630}
            y={223}
          >
            <tspan
              dy="0.71em"
              x={630}
            >
              28
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={620}
            x={80}
            x1={650}
            x2={650}
            y={215}
            y1={221}
            y2={215}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={620}
            x={650}
            y={223}
          >
            <tspan
              dy="0.71em"
              x={650}
            >
              29
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={620}
            x={80}
            x1={670}
            x2={670}
            y={215}
            y1={221}
            y2={215}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={620}
            x={670}
            y={223}
          >
            <tspan
              dy="0.71em"
              x={670}
            >
              30
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={620}
            x={80}
            x1={690}
            x2={690}
            y={215}
            y1={221}
            y2={215}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={620}
            x={690}
            y={223}
          >
            <tspan
              dy="0.71em"
              x={690}
            >
              31
            </tspan>
          </text>
        </g>
      </g>
    </g>
    <g
      className="recharts-layer recharts-cartesian-axis recharts-yAxis yAxis"
    >
      <line
        className="recharts-cartesian-axis-line"
        fill="none"
        height={210}
        stroke="#666"
        width={60}
        x={20}
        x1={80}
        x2={80}
        y={5}
        y1={5}
        y2={215}
      />
      <g
        className="recharts-cartesian-axis-ticks"
      >
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={210}
            stroke="#666"
            width={60}
            x={20}
            x1={74}
            x2={80}
            y={5}
            y1={215}
            y2={215}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={210}
            stroke="none"
            textAnchor="end"
            width={60}
            x={72}
            y={215}
          >
            <tspan
              dy="0.355em"
              x={72}
            >
              0
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={210}
            stroke="#666"
            width={60}
            x={20}
            x1={74}
            x2={80}
            y={5}
            y1={162.5}
            y2={162.5}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={210}
            stroke="none"
            textAnchor="end"
            width={60}
            x={72}
            y={162.5}
          >
            <tspan
              dy="0.355em"
              x={72}
            >
              2
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={210}
            stroke="#666"
            width={60}
            x={20}
            x1={74}
            x2={80}
            y={5}
            y1={110}
            y2={110}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={210}
            stroke="none"
            textAnchor="end"
            width={60}
            x={72}
            y={110}
          >
            <tspan
              dy="0.355em"
              x={72}
            >
              4
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={210}
            stroke="#666"
            width={60}
            x={20}
            x1={74}
            x2={80}
            y={5}
            y1={57.5}
            y2={57.5}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={210}
            stroke="none"
            textAnchor="end"
            width={60}
            x={72}
            y={57.5}
          >
            <tspan
              dy="0.355em"
              x={72}
            >
              6
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={210}
            stroke="#666"
            width={60}
            x={20}
            x1={74}
            x2={80}
            y={5}
            y1={5}
            y2={5}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={210}
            stroke="none"
            textAnchor="end"
            width={60}
            x={72}
            y={5}
          >
            <tspan
              dy="0.355em"
              x={72}
            >
              8
            </tspan>
          </text>
        </g>
      </g>
    </g>
    <g
      className="recharts-layer recharts-area"
    >
      <g
        className="recharts-layer"
      >
        <defs>
          <clipPath
            id="animationClipPath-recharts-area-5"
          >
            <rect
              height={216}
              width={0}
              x={90}
              y={0}
            />
          </clipPath>
        </defs>
        <g
          className="recharts-layer"
          clipPath="url(#animationClipPath-recharts-area-5)"
        >
          <g
            className="recharts-layer"
            clipPath={null}
          >
            <path
              className="recharts-curve recharts-area-area"
              d="M90,188.75C96.66666666666667,180,103.33333333333333,171.25,110,162.5C116.66666666666667,153.75,123.33333333333333,149.375,130,136.25C136.66666666666666,123.125,143.33333333333334,101.25,150,83.75C156.66666666666666,66.25,163.33333333333334,31.25,170,31.25C176.66666666666666,31.25,183.33333333333334,66.25,190,83.75C196.66666666666666,101.25,203.33333333333334,123.125,210,136.25C216.66666666666666,149.375,223.33333333333334,162.5,230,162.5C236.66666666666666,162.5,243.33333333333334,136.25,250,110C256.6666666666667,83.75,263.3333333333333,5,270,5C276.6666666666667,5,283.3333333333333,22.5,290,31.25C296.6666666666667,40,303.3333333333333,44.375,310,57.5C316.6666666666667,70.625,323.3333333333333,88.125,330,110C336.6666666666667,131.875,343.3333333333333,188.75,350,188.75C356.6666666666667,188.75,363.3333333333333,188.75,370,188.75C376.6666666666667,188.75,383.3333333333333,175.625,390,162.5C396.6666666666667,149.375,403.3333333333333,123.125,410,110C416.6666666666667,96.875,423.3333333333333,92.5,430,83.75C436.6666666666667,75,443.3333333333333,66.25,450,57.5C456.6666666666667,48.75,463.3333333333333,40,470,31.25C476.6666666666667,22.5,483.3333333333333,5,490,5C496.6666666666667,5,503.3333333333333,31.25,510,31.25C516.6666666666666,31.25,523.3333333333334,31.25,530,31.25C536.6666666666666,31.25,543.3333333333334,57.5,550,57.5C556.6666666666666,57.5,563.3333333333334,57.5,570,57.5C576.6666666666666,57.5,583.3333333333334,75,590,83.75C596.6666666666666,92.5,603.3333333333334,110,610,110C616.6666666666666,110,623.3333333333334,48.75,630,31.25C636.6666666666666,13.75,643.3333333333334,5,650,5C656.6666666666666,5,663.3333333333334,31.25,670,31.25C676.6666666666666,31.25,683.3333333333334,31.25,690,31.25L690,215C683.3333333333334,215,676.6666666666666,215,670,215C663.3333333333334,215,656.6666666666666,215,650,215C643.3333333333334,215,636.6666666666666,215,630,215C623.3333333333334,215,616.6666666666666,215,610,215C603.3333333333334,215,596.6666666666666,215,590,215C583.3333333333334,215,576.6666666666666,215,570,215C563.3333333333334,215,556.6666666666666,215,550,215C543.3333333333334,215,536.6666666666666,215,530,215C523.3333333333334,215,516.6666666666666,215,510,215C503.3333333333333,215,496.6666666666667,215,490,215C483.3333333333333,215,476.6666666666667,215,470,215C463.3333333333333,215,456.6666666666667,215,450,215C443.3333333333333,215,436.6666666666667,215,430,215C423.3333333333333,215,416.6666666666667,215,410,215C403.3333333333333,215,396.6666666666667,215,390,215C383.3333333333333,215,376.6666666666667,215,370,215C363.3333333333333,215,356.6666666666667,215,350,215C343.3333333333333,215,336.6666666666667,215,330,215C323.3333333333333,215,316.6666666666667,215,310,215C303.3333333333333,215,296.6666666666667,215,290,215C283.3333333333333,215,276.6666666666667,215,270,215C263.3333333333333,215,256.6666666666667,215,250,215C243.33333333333334,215,236.66666666666666,215,230,215C223.33333333333334,215,216.66666666666666,215,210,215C203.33333333333334,215,196.66666666666666,215,190,215C183.33333333333334,215,176.66666666666666,215,170,215C163.33333333333334,215,156.66666666666666,215,150,215C143.33333333333334,215,136.66666666666666,215,130,215C123.33333333333333,215,116.66666666666667,215,110,215C103.33333333333333,215,96.66666666666667,215,90,215Z"
              fill="#2ad2c9"
              fillOpacity={0.6}
              height={210}
              stroke="none"
              width={620}
            />
            <path
              className="recharts-curve recharts-area-curve"
              d="M90,188.75C96.66666666666667,180,103.33333333333333,171.25,110,162.5C116.66666666666667,153.75,123.33333333333333,149.375,130,136.25C136.66666666666666,123.125,143.33333333333334,101.25,150,83.75C156.66666666666666,66.25,163.33333333333334,31.25,170,31.25C176.66666666666666,31.25,183.33333333333334,66.25,190,83.75C196.66666666666666,101.25,203.33333333333334,123.125,210,136.25C216.66666666666666,149.375,223.33333333333334,162.5,230,162.5C236.66666666666666,162.5,243.33333333333334,136.25,250,110C256.6666666666667,83.75,263.3333333333333,5,270,5C276.6666666666667,5,283.3333333333333,22.5,290,31.25C296.6666666666667,40,303.3333333333333,44.375,310,57.5C316.6666666666667,70.625,323.3333333333333,88.125,330,110C336.6666666666667,131.875,343.3333333333333,188.75,350,188.75C356.6666666666667,188.75,363.3333333333333,188.75,370,188.75C376.6666666666667,188.75,383.3333333333333,175.625,390,162.5C396.6666666666667,149.375,403.3333333333333,123.125,410,110C416.6666666666667,96.875,423.3333333333333,92.5,430,83.75C436.6666666666667,75,443.3333333333333,66.25,450,57.5C456.6666666666667,48.75,463.3333333333333,40,470,31.25C476.6666666666667,22.5,483.3333333333333,5,490,5C496.6666666666667,5,503.3333333333333,31.25,510,31.25C516.6666666666666,31.25,523.3333333333334,31.25,530,31.25C536.6666666666666,31.25,543.3333333333334,57.5,550,57.5C556.6666666666666,57.5,563.3333333333334,57.5,570,57.5C576.6666666666666,57.5,583.3333333333334,75,590,83.75C596.6666666666666,92.5,603.3333333333334,110,610,110C616.6666666666666,110,623.3333333333334,48.75,630,31.25C636.6666666666666,13.75,643.3333333333334,5,650,5C656.6666666666666,5,663.3333333333334,31.25,670,31.25C676.6666666666666,31.25,683.3333333333334,31.25,690,31.25"
              fill="none"
              fillOpacity={0.6}
              height={210}
              stroke="#2ad2c9"
              width={620}
            />
          </g>
        </g>
      </g>
    </g>
    <g
      className="recharts-layer recharts-line"
    >
      <path
        className="recharts-curve recharts-line-curve"
        clipPath={null}
        d="M90,188.75C96.66666666666667,162.5,103.33333333333333,136.25,110,136.25C116.66666666666667,136.25,123.33333333333333,162.5,130,162.5C136.66666666666666,162.5,143.33333333333334,136.25,150,110C156.66666666666666,83.75,163.33333333333334,5,170,5C176.66666666666666,5,183.33333333333334,57.5,190,57.5C196.66666666666666,57.5,203.33333333333334,57.5,210,57.5C216.66666666666666,57.5,223.33333333333334,57.5,230,57.5C236.66666666666666,57.5,243.33333333333334,96.875,250,110C256.6666666666667,123.125,263.3333333333333,127.5,270,136.25C276.6666666666667,145,283.3333333333333,153.75,290,162.5C296.6666666666667,171.25,303.3333333333333,188.75,310,188.75C316.6666666666667,188.75,323.3333333333333,127.5,330,110C336.6666666666667,92.5,343.3333333333333,96.875,350,83.75C356.6666666666667,70.625,363.3333333333333,31.25,370,31.25C376.6666666666667,31.25,383.3333333333333,118.75,390,136.25C396.6666666666667,153.75,403.3333333333333,162.5,410,162.5C416.6666666666667,162.5,423.3333333333333,110,430,110C436.6666666666667,110,443.3333333333333,149.375,450,162.5C456.6666666666667,175.625,463.3333333333333,188.75,470,188.75C476.6666666666667,188.75,483.3333333333333,83.75,490,83.75C496.6666666666667,83.75,503.3333333333333,110,510,110C516.6666666666666,110,523.3333333333334,110,530,110C536.6666666666666,110,543.3333333333334,110,550,110"
        fill="none"
        height={210}
        stroke="#614767"
        strokeDasharray="0px 0px"
        strokeWidth={1}
        width={620}
      />
    </g>
    <g
      className="recharts-layer recharts-line"
    >
      <path
        className="recharts-curve recharts-line-curve"
        clipPath={null}
        d="M570,83.75C576.6666666666666,83.75,583.3333333333334,83.75,590,83.75C596.6666666666666,83.75,603.3333333333334,57.5,610,57.5C616.6666666666666,57.5,623.3333333333334,57.5,630,57.5C636.6666666666666,57.5,643.3333333333334,40,650,31.25C656.6666666666666,22.5,663.3333333333334,5,670,5C676.6666666666666,5,683.3333333333334,5,690,5"
        fill="none"
        height={210}
        stroke="#ff8d6d"
        strokeDasharray="0px, 0px"
        strokeWidth={1}
        width={620}
      />
    </g>
  </svg>
  <div
    className="recharts-legend-wrapper"
    style={
      Object {
        "bottom": 5,
        "height": "auto",
        "left": 20,
        "position": "absolute",
        "width": 680,
      }
    }
  >
    <ul
      className="recharts-default-legend"
      style={
        Object {
          "margin": 0,
          "padding": 0,
          "textAlign": "center",
        }
      }
    >
      <li
        className="recharts-legend-item legend-item-0"
        style={
          Object {
            "display": "inline-block",
            "marginRight": 10,
          }
        }
      >
        <svg
          className="recharts-surface"
          height={14}
          style={
            Object {
              "display": "inline-block",
              "marginRight": 4,
              "verticalAlign": "middle",
            }
          }
          version="1.1"
          viewBox="0 0 32 32"
          width={14}
        >
          <path
            className="recharts-legend-icon"
            d="M0,16h10.666666666666666
                      A5.333333333333333,5.333333333333333,0,1,1,21.333333333333332,16
                      H32M21.333333333333332,16
                      A5.333333333333333,5.333333333333333,0,1,1,10.666666666666666,16"
            fill="none"
            stroke="#2ad2c9"
            strokeWidth={4}
          />
        </svg>
        <span
          className="recharts-legend-item-text"
        >
          previous
        </span>
      </li>
      <li
        className="recharts-legend-item legend-item-1"
        style={
          Object {
            "display": "inline-block",
            "marginRight": 10,
          }
        }
      >
        <svg
          className="recharts-surface"
          height={14}
          style={
            Object {
              "display": "inline-block",
              "marginRight": 4,
              "verticalAlign": "middle",
            }
          }
          version="1.1"
          viewBox="0 0 32 32"
          width={14}
        >
          <path
            className="recharts-legend-icon"
            d="M0,16h10.666666666666666
                      A5.333333333333333,5.333333333333333,0,1,1,21.333333333333332,16
                      H32M21.333333333333332,16
                      A5.333333333333333,5.333333333333333,0,1,1,10.666666666666666,16"
            fill="none"
            stroke="#614767"
            strokeWidth={4}
          />
        </svg>
        <span
          className="recharts-legend-item-text"
        >
          actual
        </span>
      </li>
      <li
        className="recharts-legend-item legend-item-2"
        style={
          Object {
            "display": "inline-block",
            "marginRight": 10,
          }
        }
      >
        <svg
          className="recharts-surface"
          height={14}
          style={
            Object {
              "display": "inline-block",
              "marginRight": 4,
              "verticalAlign": "middle",
            }
          }
          version="1.1"
          viewBox="0 0 32 32"
          width={14}
        >
          <path
            className="recharts-legend-icon"
            d="M0,16h10.666666666666666
                      A5.333333333333333,5.333333333333333,0,1,1,21.333333333333332,16
                      H32M21.333333333333332,16
                      A5.333333333333333,5.333333333333333,0,1,1,10.666666666666666,16"
            fill="none"
            stroke="#ff8d6d"
            strokeWidth={4}
          />
        </svg>
        <span
          className="recharts-legend-item-text"
        >
          forecast
        </span>
      </li>
    </ul>
  </div>
  <div
    className="recharts-tooltip-wrapper"
    style={
      Object {
        "MozTransform": "translate(undefinedpx, undefinedpx)",
        "OTransform": "translate(undefinedpx, undefinedpx)",
        "WebkitTransform": "translate(undefinedpx, undefinedpx)",
        "msTransform": "translate(undefinedpx, undefinedpx)",
        "pointerEvents": "none",
        "position": "absolute",
        "top": 0,
        "transform": "translate(undefinedpx, undefinedpx)",
        "visibility": "hidden",
      }
    }
  >
    <div
      className="recharts-default-tooltip"
      style={
        Object {
          "backgroundColor": "#fff",
          "border": "1px solid #ccc",
          "margin": 0,
          "padding": 10,
          "whiteSpace": "nowrap",
        }
      }
    >
      <p
        className="recharts-tooltip-label"
        style={
          Object {
            "margin": 0,
          }
        }
      >
        
      </p>
    </div>
  </div>
</div>
`;

exports[`Transaction:Transaction 1`] = `
<form
  className="grommetux-form grommetux-form--pad-none"
  onSubmit={[Function]}
>
  <div
    className="grommetux-box grommetux-box--direction-column grommetux-box--responsive grommetux-box--pad-none grommetux-box--flex-off"
    id={undefined}
    onClick={undefined}
    role={undefined}
    style={Object {}}
    tabIndex={undefined}
  >
    <header
      className="grommetux-box grommetux-box--direction-row grommetux-box--align-center grommetux-box--pad-horizontal-none grommetux-box--pad-vertical-none grommetux-box--pad-between-small grommetux-header"
      id={undefined}
      onClick={undefined}
      role={undefined}
      style={Object {}}
      tabIndex={undefined}
    >
      <h1
        className="grommetux-heading"
      >
        Add
         Transaction
      </h1>
    </header>
  </div>
  <div
    className="grommetux-form-fields"
  >
    <div
      className="grommetux-form-field grommetux-form-field--size-medium"
      onClick={[Function]}
    >
      <span
        className="grommetux-form-field__contents"
      >
        <label
          className="grommetux-radio-button"
          htmlFor="expense-true"
        >
          <input
            checked={true}
            className="grommetux-radio-button__input"
            id="expense-true"
            onChange={[Function]}
            type="radio"
          />
          <span
            className="grommetux-radio-button__control"
          />
          <span
            className="grommetux-radio-button__label"
          >
            Expense
          </span>
        </label>
        <label
          className="grommetux-radio-button"
          htmlFor="expense-false"
        >
          <input
            checked={false}
            className="grommetux-radio-button__input"
            id="expense-false"
            onChange={[Function]}
            type="radio"
          />
          <span
            className="grommetux-radio-button__control"
          />
          <span
            className="grommetux-radio-button__label"
          >
            Income
          </span>
        </label>
      </span>
    </div>
    <div
      className="grommetux-form-field grommetux-form-field--size-medium"
      onClick={[Function]}
    >
      <label
        className="grommetux-form-field__label"
        htmlFor={undefined}
      >
        Amount
      </label>
      <span
        className="grommetux-form-field__contents"
      >
        <span
          className="grommetux-number-input"
        >
          <input
            className="grommetux-input grommetux-number-input__input"
            disabled={undefined}
            min={0}
            onChange={[Function]}
            tabIndex="0"
            type="number"
            value={0}
          />
          <button
            aria-label={undefined}
            className="grommetux-button grommetux-button--plain grommetux-number-input__subtract"
            disabled={false}
            href={undefined}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              className="grommetux-button__icon"
            >
              <svg
                aria-label="subtract"
                className="grommetux-control-icon grommetux-control-icon-subtract grommetux-control-icon--responsive"
                height="24px"
                role="img"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  strokeWidth="2"
                />
              </svg>
            </span>
          </button>
          <button
            aria-label={undefined}
            className="grommetux-button grommetux-button--plain grommetux-number-input__add"
            disabled={false}
            href={undefined}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              className="grommetux-button__icon"
            >
              <svg
                aria-label="add"
                className="grommetux-control-icon grommetux-control-icon-add grommetux-control-icon--responsive"
                height="24px"
                role="img"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <path
                  d="M12,22 L12,2 M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  strokeWidth="2"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </div>
    <div
      className="grommetux-form-field grommetux-form-field--size-medium"
      onClick={[Function]}
    >
      <label
        className="grommetux-form-field__label"
        htmlFor={undefined}
      >
        Details
      </label>
      <span
        className="grommetux-form-field__contents"
      >
        <input
          autoComplete="off"
          className="grommetux-text-input grommetux-input"
          defaultValue={undefined}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          placeholder={undefined}
          type="text"
          value=""
        />
      </span>
    </div>
    <div
      className="grommetux-form-field grommetux-form-field--size-medium"
      onClick={[Function]}
    >
      <label
        className="grommetux-form-field__label"
        htmlFor={undefined}
      >
        Date
      </label>
      <span
        className="grommetux-form-field__contents"
      >
        <div
          className="grommetux-date-time"
        >
          <input
            className="grommetux-input grommetux-date-time__input"
            onChange={[Function]}
            placeholder="YYYY-MM-DD"
            value=""
          />
          <button
            aria-label="Date Time Icon"
            className="grommetux-button grommetux-button--plain grommetux-date-time__control"
            disabled={false}
            href={undefined}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              className="grommetux-button__icon"
            >
              <svg
                aria-label="calendar"
                className="grommetux-control-icon grommetux-control-icon-calendar grommetux-control-icon--responsive"
                height="24px"
                role="img"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <path
                  d="M2,5 L22,5 L22,22 L2,22 L2,5 Z M18,5 L18,1 M6,5 L6,1 M2,10 L22,10"
                  fill="none"
                  stroke="#000"
                  strokeWidth="2"
                />
              </svg>
            </span>
          </button>
        </div>
      </span>
    </div>
  </div>
  <footer
    className="grommetux-box grommetux-box--direction-row grommetux-box--justify-between grommetux-box--align-center grommetux-box--pad-vertical-small grommetux-footer"
    id={undefined}
    onClick={undefined}
    role={undefined}
    style={Object {}}
    tabIndex={undefined}
  >
    <button
      aria-label={undefined}
      className="grommetux-button grommetux-button--primary"
      disabled={false}
      href={undefined}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="submit"
    >
      <span
        className="grommetux-button__label"
      >
        Submit
      </span>
    </button>
  </footer>
</form>
`;

exports[`Transaction:TransactionWithData 1`] = `
<form
  className="grommetux-form grommetux-form--pad-none"
  onSubmit={[Function]}
>
  <div
    className="grommetux-box grommetux-box--direction-column grommetux-box--responsive grommetux-box--pad-none grommetux-box--flex-off"
    id={undefined}
    onClick={undefined}
    role={undefined}
    style={Object {}}
    tabIndex={undefined}
  >
    <header
      className="grommetux-box grommetux-box--direction-row grommetux-box--align-center grommetux-box--pad-horizontal-none grommetux-box--pad-vertical-none grommetux-box--pad-between-small grommetux-header"
      id={undefined}
      onClick={undefined}
      role={undefined}
      style={Object {}}
      tabIndex={undefined}
    >
      <h1
        className="grommetux-heading"
      >
        Edit
         Transaction
      </h1>
    </header>
  </div>
  <div
    className="grommetux-form-fields"
  >
    <div
      className="grommetux-form-field grommetux-form-field--size-medium"
      onClick={[Function]}
    >
      <span
        className="grommetux-form-field__contents"
      >
        <label
          className="grommetux-radio-button"
          htmlFor="expense-true"
        >
          <input
            checked={true}
            className="grommetux-radio-button__input"
            id="expense-true"
            onChange={[Function]}
            type="radio"
          />
          <span
            className="grommetux-radio-button__control"
          />
          <span
            className="grommetux-radio-button__label"
          >
            Expense
          </span>
        </label>
        <label
          className="grommetux-radio-button"
          htmlFor="expense-false"
        >
          <input
            checked={false}
            className="grommetux-radio-button__input"
            id="expense-false"
            onChange={[Function]}
            type="radio"
          />
          <span
            className="grommetux-radio-button__control"
          />
          <span
            className="grommetux-radio-button__label"
          >
            Income
          </span>
        </label>
      </span>
    </div>
    <div
      className="grommetux-form-field grommetux-form-field--size-medium"
      onClick={[Function]}
    >
      <label
        className="grommetux-form-field__label"
        htmlFor={undefined}
      >
        Amount
      </label>
      <span
        className="grommetux-form-field__contents"
      >
        <span
          className="grommetux-number-input"
        >
          <input
            className="grommetux-input grommetux-number-input__input"
            disabled={undefined}
            min={0}
            onChange={[Function]}
            tabIndex="0"
            type="number"
            value={100}
          />
          <button
            aria-label={undefined}
            className="grommetux-button grommetux-button--plain grommetux-number-input__subtract"
            disabled={false}
            href={undefined}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              className="grommetux-button__icon"
            >
              <svg
                aria-label="subtract"
                className="grommetux-control-icon grommetux-control-icon-subtract grommetux-control-icon--responsive"
                height="24px"
                role="img"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  strokeWidth="2"
                />
              </svg>
            </span>
          </button>
          <button
            aria-label={undefined}
            className="grommetux-button grommetux-button--plain grommetux-number-input__add"
            disabled={false}
            href={undefined}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              className="grommetux-button__icon"
            >
              <svg
                aria-label="add"
                className="grommetux-control-icon grommetux-control-icon-add grommetux-control-icon--responsive"
                height="24px"
                role="img"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <path
                  d="M12,22 L12,2 M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  strokeWidth="2"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </div>
    <div
      className="grommetux-form-field grommetux-form-field--size-medium"
      onClick={[Function]}
    >
      <label
        className="grommetux-form-field__label"
        htmlFor={undefined}
      >
        Details
      </label>
      <span
        className="grommetux-form-field__contents"
      >
        <input
          autoComplete="off"
          className="grommetux-text-input grommetux-input"
          defaultValue={undefined}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          placeholder={undefined}
          type="text"
          value="Hello Transaction"
        />
      </span>
    </div>
    <div
      className="grommetux-form-field grommetux-form-field--size-medium"
      onClick={[Function]}
    >
      <label
        className="grommetux-form-field__label"
        htmlFor={undefined}
      >
        Date
      </label>
      <span
        className="grommetux-form-field__contents"
      >
        <div
          className="grommetux-date-time"
        >
          <input
            className="grommetux-input grommetux-date-time__input"
            onChange={[Function]}
            placeholder="YYYY-MM-DD"
            value="2018-01-23"
          />
          <button
            aria-label="Date Time Icon"
            className="grommetux-button grommetux-button--plain grommetux-date-time__control"
            disabled={false}
            href={undefined}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              className="grommetux-button__icon"
            >
              <svg
                aria-label="calendar"
                className="grommetux-control-icon grommetux-control-icon-calendar grommetux-control-icon--responsive"
                height="24px"
                role="img"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <path
                  d="M2,5 L22,5 L22,22 L2,22 L2,5 Z M18,5 L18,1 M6,5 L6,1 M2,10 L22,10"
                  fill="none"
                  stroke="#000"
                  strokeWidth="2"
                />
              </svg>
            </span>
          </button>
        </div>
      </span>
    </div>
  </div>
  <footer
    className="grommetux-box grommetux-box--direction-row grommetux-box--justify-between grommetux-box--align-center grommetux-box--pad-vertical-small grommetux-footer"
    id={undefined}
    onClick={undefined}
    role={undefined}
    style={Object {}}
    tabIndex={undefined}
  >
    <button
      aria-label={undefined}
      className="grommetux-button grommetux-button--primary"
      disabled={false}
      href={undefined}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="submit"
    >
      <span
        className="grommetux-button__label"
      >
        Submit
      </span>
    </button>
    <button
      aria-label={undefined}
      className="grommetux-button grommetux-button--plain grommetux-background-hover-color-index-critical"
      disabled={false}
      href={undefined}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      <span
        className="grommetux-button__icon"
      >
        <svg
          aria-label="trash"
          className="grommetux-control-icon grommetux-control-icon-trash grommetux-control-icon--responsive"
          height="24px"
          role="img"
          version="1.1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M4,5 L20,5 L20,23 L4,23 L4,5 Z M1,5 L23,5 M9,1 L15,1 L15,5 L9,5 L9,1 Z M9,1 L15,1 L15,5 L9,5 L9,1 Z M15,9 L15,19 M9,9 L9,19"
            fill="none"
            stroke="#000"
            strokeWidth="2"
          />
        </svg>
      </span>
    </button>
  </footer>
</form>
`;

exports[`WalletAdd:WalletAdd 1`] = `
<form
  className="grommetux-form grommetux-form--pad-none"
  onSubmit={[Function]}
>
  <div
    className="grommetux-box grommetux-box--direction-column grommetux-box--responsive grommetux-box--pad-none grommetux-box--flex-off"
    id={undefined}
    onClick={undefined}
    role={undefined}
    style={Object {}}
    tabIndex={undefined}
  >
    <header
      className="grommetux-box grommetux-box--direction-row grommetux-box--align-center grommetux-box--pad-horizontal-none grommetux-box--pad-vertical-none grommetux-box--pad-between-small grommetux-header"
      id={undefined}
      onClick={undefined}
      role={undefined}
      style={Object {}}
      tabIndex={undefined}
    >
      <h1
        className="grommetux-heading"
      >
        Add Wallet
      </h1>
    </header>
  </div>
  <div
    className="grommetux-form-fields"
  >
    <div
      className="grommetux-form-field grommetux-form-field--size-medium"
      onClick={[Function]}
    >
      <label
        className="grommetux-form-field__label"
        htmlFor={undefined}
      >
        Name
      </label>
      <span
        className="grommetux-form-field__contents"
      >
        <input
          autoComplete="off"
          className="grommetux-text-input grommetux-input"
          defaultValue={undefined}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          placeholder={undefined}
          type="text"
          value=""
        />
      </span>
    </div>
    <div
      className="grommetux-form-field grommetux-form-field--size-medium"
      onClick={[Function]}
    >
      <label
        className="grommetux-form-field__label"
        htmlFor={undefined}
      >
        Balance
      </label>
      <span
        className="grommetux-form-field__contents"
      >
        <span
          className="grommetux-number-input"
        >
          <input
            className="grommetux-input grommetux-number-input__input"
            disabled={undefined}
            min={0}
            onChange={[Function]}
            tabIndex="0"
            type="number"
            value={0}
          />
          <button
            aria-label={undefined}
            className="grommetux-button grommetux-button--plain grommetux-number-input__subtract"
            disabled={false}
            href={undefined}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              className="grommetux-button__icon"
            >
              <svg
                aria-label="subtract"
                className="grommetux-control-icon grommetux-control-icon-subtract grommetux-control-icon--responsive"
                height="24px"
                role="img"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  strokeWidth="2"
                />
              </svg>
            </span>
          </button>
          <button
            aria-label={undefined}
            className="grommetux-button grommetux-button--plain grommetux-number-input__add"
            disabled={false}
            href={undefined}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              className="grommetux-button__icon"
            >
              <svg
                aria-label="add"
                className="grommetux-control-icon grommetux-control-icon-add grommetux-control-icon--responsive"
                height="24px"
                role="img"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <path
                  d="M12,22 L12,2 M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  strokeWidth="2"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </div>
    <div
      className="grommetux-form-field grommetux-form-field--size-medium"
      onClick={[Function]}
    >
      <label
        className="grommetux-form-field__label"
        htmlFor={undefined}
      >
        Currency
      </label>
      <span
        className="grommetux-form-field__contents"
      >
        <div
          className="grommetux-select"
          onClick={[Function]}
        >
          <input
            className="grommetux-input grommetux-select__input"
            placeholder={undefined}
            readOnly={true}
            type="text"
            value="USD ($)"
          />
          <button
            aria-label="Select Icon"
            className="grommetux-button grommetux-button--plain grommetux-select__control"
            disabled={false}
            href={undefined}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              className="grommetux-button__icon"
            >
              <svg
                aria-label="caret-down"
                className="grommetux-control-icon grommetux-control-icon-caret-down grommetux-control-icon--responsive"
                height="24px"
                role="img"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <polygon
                  fill="none"
                  points="22 8 12 20 2 8"
                  stroke="#000"
                  strokeWidth="2"
                />
              </svg>
            </span>
          </button>
        </div>
      </span>
    </div>
  </div>
  <footer
    className="grommetux-box grommetux-box--direction-row grommetux-box--align-center grommetux-box--pad-vertical-small grommetux-footer"
    id={undefined}
    onClick={undefined}
    role={undefined}
    style={Object {}}
    tabIndex={undefined}
  >
    <button
      aria-label={undefined}
      className="grommetux-button grommetux-button--primary"
      disabled={false}
      href={undefined}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="submit"
    >
      <span
        className="grommetux-button__label"
      >
        Submit
      </span>
    </button>
  </footer>
</form>
`;
